test/indexOutOfBounds13.slq

def main(){
	x:=0:int[3];
	return x[-1]; // error
}
